[tool.poetry]
name = "dash-graph-example"
version = "0.1.0"
description = ""
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.9.3"
dash-cytoscape = "^0.3.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
